--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vkasun-react-portfolio",
   "version": "0.1.0",
-  "homepage": "build",
+  "homepage": "/Home",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.5.0",
