--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
         "web-vitals": "^2.1.2"
     },
     "scripts": {
-      "start": "react-script-start",
-      "start": "node server.js",
-      "heroku-postbuild": "cd client && npm install && npm run build",
+        "start": "react-scripts start",
+        "heroku-postbuild": "cd client && npm install && npm run build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
