--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
+        "exports": "^0.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.1.1",
         "react-scripts": "5.0.0",
-        "web-vitals": "^2.1.2"
+        "web-vitals": "^2.1.2",
+        "autoprefixer": "^10.4.0",
+        "postcss": "^8.4.5",
+        "tailwind-styled-components": "^2.1.6",
+        "tailwindcss": "^3.0.23"
     },
     "scripts": {
         "start": "react-scripts start",
