--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "tailwindcss": "^3.0.23"
     },
     "scripts": {
-        "start": "node server.js",
+        "start": "node index.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
