--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vkasun-react-app",
+    "name": "vkasun-react-portfolio",
     "version": "0.1.0",
     "homepage": "/",
     "private": true,
@@ -22,7 +22,7 @@
         "tailwindcss": "^3.0.23"
     },
     "scripts": {
-        "start": "node index.js",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
