--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vkasun-react-portfolio",
+    "name": "vkasun-react-app",
     "version": "0.1.0",
     "homepage": "/",
     "private": true,
