--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
         "autoprefixer": "^10.4.0",
+        "axios": "^0.26.1",
         "exports": "^0.0.1",
         "express": "^4.17.3",
         "postcss": "^8.4.5",
